--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.4",
+    "@vercel/analytics": "^1.5.0",
+    "i18next": "^25.3.2",
+    "lightgallery": "^2.9.0-beta.1",
+    "next": "14.2.15",
     "react": "^18",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-i18next": "^15.6.0",
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
+    "rsuite": "^5.83.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
