--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lightgallery": "^2.9.0-beta.1",
     "next": "14.2.15",
     "react": "^18",
+    "react-animate-height": "^3.2.3",
     "react-calendar": "^6.0.0",
     "react-dom": "^18",
     "react-i18next": "^15.6.0",
